--- a/index.html
+++ b/index.html
@@ -136,24 +136,24 @@
                 <a href="contact.html" class="btn btn-primary">Start a Project</a>
             </div>
 
-            <!-- Client Logos Carousel (Start) -->
-            <div class="logo-carousel-section">
-                <div class="logo-carousel-container">
-                    <div class="logo-track">
-                        <div class="client-logo"><i class="fab fa-google"></i></div>
-                        <div class="client-logo"><i class="fab fa-apple"></i></div>
-                        <div class="client-logo"><i class="fab fa-amazon"></i></div>
-                        <div class="client-logo"><i class="fab fa-microsoft"></i></div>
-                        <div class="client-logo"><i class="fab fa-spotify"></i></div>
-                        <div class="client-logo"><i class="fab fa-airbnb"></i></div>
-                        <div class="client-logo"><i class="fab fa-uber"></i></div>
-                        <div class="client-logo"><i class="fab fa-instagram"></i></div>
-                    </div>
+        </div>
+
+        <!-- Client Logos Carousel (Start) -->
+        <div class="logo-carousel-section">
+            <div class="logo-carousel-container">
+                <div class="logo-track">
+                    <div class="client-logo"><img src="assets/clients/logo-1.png" alt="Client Logo 1"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-2.png" alt="Client Logo 2"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-3.png" alt="Client Logo 3"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-4.png" alt="Client Logo 4"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-5.png" alt="Client Logo 5"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-6.png" alt="Client Logo 6"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-7.png" alt="Client Logo 7"></div>
+                    <div class="client-logo"><img src="assets/clients/logo-8.png" alt="Client Logo 8"></div>
                 </div>
             </div>
-            <!-- Client Logos Carousel (End) -->
-
         </div>
+        <!-- Client Logos Carousel (End) -->
     </section>
 
     <!-- jQuery -->
@@ -366,9 +366,12 @@
                 <div class="footer-col">
                     <h4>Social</h4>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/madobrands/" class="social-btn"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/madobrands-india/" class="social-btn"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="https://www.facebook.com/madobrandsindia/" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/madobrands/" class="social-btn"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/madobrands-india/" class="social-btn"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.facebook.com/madobrandsindia/" class="social-btn"><i
+                                class="fab fa-facebook-f"></i></a>
                         <a href="#" class="social-btn"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
